# SCCompiler

./: .gitignore  CMakeLists.txt  README.md
src/: Ast.cpp  Ast.h  Core.h  Error.cpp  Error.h  Gen.cpp  Gen.h  Parser.cpp  Parser.h  Pool.h  Scanner.cpp  Scanner.h  Scc.cpp  Scc.h  Token.cpp  Token.h  Type.h  Util.h  Visitor.h  main.cpp
test/: 2-Simple-Function.c  3-Cons-And-Static.c  4-BinaryOp.c  GenDoc.md
test/GenTest/: Ast.cpp  Ast.h  Gen.cpp  Type.h  parser.cpp  tokenizer.cpp
